add our service section

--- a/assets/vars.css
+++ b/assets/vars.css
@@ -1,7 +1,7 @@
 :root {
   --c-primary: 58, 12, 163;
 
-  --c-color-1: 67, 97, 238;
+  --c-color-1: 67,97,238;
   --c-color-2: 76, 201, 240;
   --c-color-3: 114, 9, 183;
   --c-color-4: 247, 37, 133;
